Fix shifting logo on large tablet breakpoint (#1210)
* Fix shifting logo on large tablet breakpoint

Specifically on the large tablet breakpoint, the text changing from
`Menu` to `Close` caused the menu button to expand ever so slightly,
causing visual shifting of the MBTA logo. To fix this, I've set a static
width and centered the text, and there appears to be no more visual
shifting when expanding the menu.

* Simplify styling

Prefer to put the breakpoint under the specific rule, seems less
confusing in general

--- a/apps/site/assets/css/_header.scss
+++ b/apps/site/assets/css/_header.scss
@@ -120,7 +120,7 @@
   }
 }
 
-nav.m-menu, .m-menu__toggle {
+nav.m-menu {
   @include media-breakpoint-up(lg) {
     display: none;
   }
@@ -355,6 +355,18 @@ nav.m-menu--mobile {
 
   .m-menu__toggle {
     @extend %hide-button;
+  }
+}
+
+.m-menu__toggle {
+  width: 5em;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @include media-breakpoint-up(lg) {
+    display: none;
   }
 }
 
